# python-tutorial-projects

./: .gitignore
dungeon-crawling-game/: README.md  config.ini  main.py
dungeon-crawling-game/data/: dungeon_2.txt
dungeon-crawling-game/model/: game.py
dungeon-crawling-game/tests/: test_game.py  test_main.py
hello-world-api-tornado/: README.md  app.py
hello-world-api-tornado/handlers/: HelloWorldHandler.py
kafka-getting-started/: README.md  compose.yaml  pyproject.toml
kafka-getting-started/admin/: create_topic.py
kafka-getting-started/consumer/: main.py
kafka-getting-started/producer/: main.py
kafka-getting-started/src/admin/: create_topic.py
kafka-getting-started/src/consumer/: main.py  message_schema.py
kafka-getting-started/src/producer/: main.py  message_schema.py
kafka-getting-started/tests/: test_consumer.py
