[tool.poetry]
name = "kafka-getting-started"
version = "0.1.0"
description = ""
authors = ["Rosa"]

[tool.poetry.dependencies]
python = "~3.10"
confluent-kafka = "2.0.2"
argparse = "^1.4.0"
tqdm = "^4.66.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
pytest = "^7.0.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
force_sort_within_sections = true
lexicographical = true
group_by_package = true
profile = "black"
lines_after_imports = 2
skip = []
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["venv", ".venv", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "fixme",
    "logging-fstring-interpolation",
    "missing-class-docstring",
    "missing-module-docstring",
]
max-line-length = 120
