[project]
name = "kafka-getting-started"
version = "0.1.0"
description = ""
authors = [{name = "Rosa"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse==1.4.0",
    "confluent-kafka==2.0.2",
    "tqdm==4.66.2",
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "isort==5.10.1",
    "mypy==1.4.1",
    "pylint==2.12.2",
    "pytest==7.0.1",
    "pytest-mock==3.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
include_trailing_comma = true
force_sort_within_sections = true
lexicographical = true
group_by_package = true
profile = "black"
lines_after_imports = 2
skip = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["venv", ".venv", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
]
max-line-length = 120
