[project]
name = "kafka-getting-started"
version = "0.1.0"
description = ""
authors = [{name = "Rosa"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse==1.4.0",
    "confluent-kafka==2.0.2",
    "jsonschema==4.21.1",  # needed for schema registry with json serializer
    "requests==2.31.0",  # needed for schema registry with json serializer
    "tqdm==4.66.2",
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "isort==5.13.2",
    "mypy==1.9.0",
    "pylint==3.1.0",
    "pytest==8.1.1",
    "pytest-mock==3.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
include_trailing_comma = true
force_sort_within_sections = true
lexicographical = true
group_by_package = true
profile = "black"
lines_after_imports = 2
skip = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["venv", ".venv", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
]
max-line-length = 120
